assets/css/style.css
* {
  /* initial style for everything. Will be overridden where need be */
  border: none;
  margin: 0;
  padding: 0;
}

header {
  /* used for the top-heading */
  background-color: cadetblue;
  width: 100%;
  height: 50px;
  position: fixed;
  /* Stay in place */
  z-index: 1;
  /* Stay on top */
}

body {
  background-image: url("../pictures/starfield.jpg");
  /*in case background can not be loaded, set a background color */
  background-color: black;
  overflow-x: hidden;
}

.main {
  color: wheat;
  margin-left: 200px;
  /* Same as the width of the sidebar */
  padding: 0px 200px;
}

header h1 {
  /* h1 in the top-header */
  text-align: justify;
  text-transform: capitalize;
  color: white;
}

header h1,h6 {
  /* headers in top bar */
  color: white;
  text-align: center;
}

#isac-face {
  width: 50px;
  height: 50px;
  float: left;
  clear: both;
}

.sidenav {
  height: auto;
  width: 200px;
  position: fixed;
  /* Stay in place */
  z-index: 1;
  /* Stay on top */
  top: 60px;
  /* Stay at the top */
  left: 0;
  overflow-x: hidden;
  /* Disable horizontal scroll */
  padding-top: 0px;
  /* Place content 60px from the top */
  background-image: url("../pictures/starfield.jpg");
  /*in case background can not be loaded, set a background color */
  background-color: black;
}

.sidenav a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: wheat;
  display: block;
}

.table-center {
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
}


table {
  width: 100%;
}

table td {
  border-collapse: collapse;
  text-align: center;
}

.hor-row-nav {
  border: 1px solid white;
  width:50%; margin-left:25% !important; margin-right:25% !important;
}

.hor-row {
  border: 1px dashed red;
}

.active {
  background-color: cadetblue;
  color: white;
}

td {
  text-align: left;
  vertical-align: top;
  color: wheat;
  font-size: large;
}

.p_bibliography {
  color: wheat;
  font-size: large;
}

.robotics {
  font-style: italic;
}

.page-title {
  color: aqua;
  padding-top: 60px;
  text-align: center;
  text-decoration: underline;
}

#main-div {
  /*centers the main div that encommpasses the whole page */
  width: 100%;
}

fieldset {
  background-image: url("../pictures/starfield.jpg");
  background-color: black;
  display: block;
  margin-left: 2px;
  margin-right: 2px;
  padding-top: 0.35em;
  padding-bottom: 0.625em;
  padding-left: 0.75em;
  padding-right: 0.75em;
  border: 2px;
}

legend {
  background-color: gray;
  color: white;
  padding: 5px 10px;
  border: 2px;
}

input {
  margin: 5px;
}

.center-form {
  text-align: center;
}

.button {
  border: 2px;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  background-color: black;
}

.black-button {
  background-color: black;
  color: white;
}

.black-button:hover {
  color: aqua;
}

.div-center {
  display: flex;
  justify-content: center;
}

#circle {
  width: 200px;
  height: 200px;
  border-radius: 50%;
}

.bibliography {
  text-align: center;
  caption-side: top;
  color: wheat;
}

caption {
  text-transform: capitalize;
  text-decoration: underline;
  font-size: larger;
}

ul {
  color: wheat;
  list-style-type: square;
  font-size: larger;
}


.ol-roman {
  list-style-type: upper-roman;
  color: wheat;
  margin-left: 200px;
  /* Same as the width of the sidebar */
  padding: 10px;
}



#timeline-table,
#timeline-table2,
#timeline-table3 #timeline-table4 {
  border: 1px;
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
}

.summary-bg {
  background-color: cadetblue;
}

.from-novel {
  font-style: italic;
  text-transform: capitalize;
  color: white;
}

.emp-red {
  color: red;
  font-size: x-large;
}

.table-bg-grey {
  border: ridge 1px red;
  background-color: rgba(38, 60, 156, 0.9);
  color: #FFF;
}

.table-bg-grey-no-border {
  background-color: rgba(38, 60, 156, 0.9);
  color: #FFF;
}

.links-table a:link,
a:visited {
  color: wheat;
  text-decoration: double;
}

.active-timeline {
  background-color: cadetblue;
  color: white;
}

/* hide menu by default*/

#hide-menu {
  display: none;
}

/* hide toptext when size is max 800 wide*/

@media screen and (max-width: 800px) {
  #published {
    display: none;
  }
}



/* turn on menu on small screen*/
@media screen and (max-width: 600px) {
  #hide-menu {
    display: inline-block;
  }
}

/* hide sidenav on small screen*/

@media screen and (max-width: 600px) {
  #side-nav {
    display: none;
  }
}

@media screen and (max-width: 600px) {

  /* hamburger-menu */
  /* has been adapted by me to fit my needs, but mostly done by
  https://codepen.io/alvarotrigo/pen/ExwgbZv 
  Styling has been changed and added that it only shows when size is 600px and less*/



  *,
  *:before,
  *:after {
    box-sizing: border-box;
  }

  html {
    font-size: 18px;
  }

  body {
    color: #e0e4cc;
    font-size: 1.2em;
    line-height: 1.6;
    overflow-x: hidden;
  }

  label .menu {
    position: absolute;
    right: -100px;
    top: -100px;
    z-index: 100;
    width: 200px;
    height: 200px;
    background: #FFF;
    border-radius: 50% 50% 50% 50%;
    -webkit-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
    box-shadow: 0 0 0 0 #FFF, 0 0 0 0 #FFF;
    cursor: pointer;

  }

  label .hamburger {
    position: absolute;
    top: 135px;
    left: 50px;
    width: 30px;
    height: 2px;
    background: #69D2e7;
    display: block;
    -webkit-transform-origin: center;
    transform-origin: center;
    -webkit-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
  }

  label .hamburger:after,
  label .hamburger:before {
    -webkit-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    background: #69d2e7;
  }

  label .hamburger:before {
    top: -10px;
  }

  label .hamburger:after {
    bottom: -10px;
  }

  label input {
    display: none;
  }

  label input:checked+.menu {
    box-shadow: 0 0 0 100vw #FFF, 0 0 0 100vh #FFF;
    border-radius: 0;

  }

  label input:checked+.menu .hamburger {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);

  }

  label input:checked+.menu .hamburger:after {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
    bottom: 0;

  }

  label input:checked+.menu .hamburger:before {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
    top: 0;

  }

  label input:checked+.menu+ul {
    opacity: 1;
  }

  label ul {
    z-index: 200;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    opacity: 0;
    -webkit-transition: .25s 0s ease-in-out;
    transition: .25s 0s ease-in-out;
  }

  label a {
    margin-bottom: 1em;
    display: block;
    color: #f38630;
    text-decoration: none;

  }


}

